# GleyLancer_Multiplayer

./: README.md  env_install.sh
Cliente/: CMakeLists.txt  build.sh  main.cpp
Cliente/data/: config_default.json
Cliente/data/imgs/enemigos/: ideas_jefes.txt
Cliente/data/imgs/personajes/p1/: texturas.txt
Cliente/src/controlador/: CartelControlador.cpp  CartelControlador.h  ControladorCliente.cpp  ControladorCliente.h  JuegoControlador.cpp  JuegoControlador.h  MenuJuegoControlador.cpp  MenuJuegoControlador.h  MenuLogControlador.cpp  MenuLogControlador.h
Cliente/src/hilos/: ColaProtegida.h  Hilo.h  HiloDibujador.cpp  HiloDibujador.h  HiloEnviar.cpp  HiloEnviar.h  HiloRecibir.cpp  HiloRecibir.h
Cliente/src/modelo/: Cartel.cpp  Cartel.h  Cliente.cpp  Cliente.h  MenuJuego.cpp  MenuJuego.h  MenuLog.cpp  MenuLog.h
Cliente/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  ConstantesComunicacion.cpp  ConstantesComunicacion.h  ConstantesEfectos.h  ConstantesEnemigo.h  ConstantesEnemigos.cpp  ConstantesExcepciones.h  ConstantesFuente.h  ConstantesItems.h  ConstantesJson.cpp  ConstantesJson.h  ConstantesLog.h  ConstantesMensajes.h  ConstantesMenu.cpp  ConstantesMenu.h  ConstantesMusica.h  ConstantesPersonaje.h  ConstantesProyectiles.cpp  ConstantesProyectiles.h  ConstantesTeclas.h  ConstantesVentana.cpp  ConstantesVentana.h  Log.cpp  Log.h  ParserEstadoJuego.cpp  ParserEstadoJuego.h  SDL_Utils.cpp  SDL_Utils.h  Timestamp.h  Utils.cpp  Utils.h
Cliente/src/vista/: BarraVidaVista.cpp  BarraVidaVista.h  CajaVista.cpp  CajaVista.h  CargadorTexturasCajas.cpp  CargadorTexturasCajas.h  CargadorTexturasEfectos.cpp  CargadorTexturasEfectos.h  CargadorTexturasEnemigos.cpp  CargadorTexturasEnemigos.h  CargadorTexturasItems.cpp  CargadorTexturasItems.h  CargadorTexturasPersonajes.cpp  CargadorTexturasPersonajes.h  CargadorTexturasProyectiles.cpp  CargadorTexturasProyectiles.h  CargadorTexturasUIPersonaje.cpp  CargadorTexturasUIPersonaje.h  CartelVista.cpp  CartelVista.h  EfectoEscudoVista.cpp  EfectoEscudoVista.h  EfectoExplosionCajaVista.cpp  EfectoExplosionCajaVista.h  EfectoExplosionEnemigoVista.cpp  EfectoExplosionEnemigoVista.h  EfectoExplosionJefeVista.cpp  EfectoExplosionJefeVista.h  EfectoExplosionPersonajeVista.cpp  EfectoExplosionPersonajeVista.h  EfectoExplosionVista.cpp  EfectoExplosionVista.h  EfectoVelocidadVista.cpp  EfectoVelocidadVista.h  Enemigo1Vista.cpp  Enemigo1Vista.h  Enemigo2Vista.cpp  Enemigo2Vista.h  EnemigoVista.cpp  EnemigoVista.h  (+30 more)
Servidor/: CMakeLists.txt  main.cpp
Servidor/data/: config_default.json
Servidor/src/controlador/: ControladorJuego.cpp  ControladorJuego.h  ControladorServidor.cpp  ControladorServidor.h
Servidor/src/modelo/juego/: Armamento.cpp  Armamento.h  ArmamentoEnemigo.cpp  ArmamentoEnemigo.h  ArmamentoJefe1.cpp  ArmamentoJefe1.h  ArmamentoJefe2.cpp  ArmamentoJefe2.h  ArmamentoJefe3.cpp  ArmamentoJefe3.h  Caja.cpp  Caja.h  Colisionador.cpp  Colisionador.h  Enemigo.cpp  Enemigo.h  IChocable.h  Item.cpp  Item.h  ItemEnergia.cpp  ItemEnergia.h  ItemEscudo.cpp  ItemEscudo.h  ItemPuntos.cpp  ItemPuntos.h  ItemVida.cpp  ItemVida.h  Jefe1.cpp  Jefe1.h  Jefe2.cpp  Jefe2.h  Jefe3.cpp  Jefe3.h  JefeBase.cpp  JefeBase.h  Juego.cpp  Juego.h  Nivel.cpp  Nivel.h  Personaje.cpp  (+7 more)
Servidor/src/modelo/juego/estado_enemigo/: EnemigoQuieto.cpp  EnemigoQuieto.h  EnemigoTipo1Moviendose.cpp  EnemigoTipo1Moviendose.h  EnemigoTipo2Moviendose.cpp  EnemigoTipo2Moviendose.h  IEstadoEnemigo.h  Jefe1Moviendose.cpp  Jefe1Moviendose.h  Jefe2Moviendose.cpp  Jefe2Moviendose.h  Jefe3Moviendose.cpp  Jefe3Moviendose.h
Servidor/src/modelo/juego/estado_personaje/: IEstadoPersonaje.h  PersonajeMoviendose.cpp  PersonajeMoviendose.h  PersonajeQuieto.cpp  PersonajeQuieto.h
Servidor/src/modelo/servidor/: Cliente.cpp  Cliente.h  Servidor.cpp  Servidor.h
Servidor/src/modelo/servidor/hilos/: ColaProtegida.h  Hilo.h  HiloAceptador.cpp  HiloAceptador.h  HiloEnviar.cpp  HiloEnviar.h  HiloRecibir.cpp  HiloRecibir.h
Servidor/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  Log.cpp  Log.h  SDL_Utils.cpp  SDL_Utils.h  SerializadorEstado.cpp  SerializadorEstado.h  Timestamp.cpp  Timestamp.h  Utils.cpp  Utils.h
Servidor/src/tools/constantes/: ConstantesComunicacion.h  ConstantesEnemigos.h  ConstantesGenerales.h  ConstantesJson.cpp  ConstantesJson.h  ConstantesLog.h  ConstantesMensajes.h  ConstantesModelo.h  ConstantesPersonaje.h  ConstantesTeclas.h  ConstantesVentana.h
