project(Cliente)

set(CMAKE_CXX_STANDARD 11)

set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Wpedantic -Wconversion -Wfloat-equal -Wmissing-include-dirs -Wredundant-decls -Wunused -Werror")
set(CMAKE_C_FLAGS "-std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(
        Cliente
        main.cpp
        src/controlador/ControladorCliente.cpp
        src/controlador/ControladorCliente.h
        src/controlador/MenuLogControlador.cpp
        src/controlador/MenuLogControlador.h
        src/controlador/JuegoControlador.h
        src/controlador/JuegoControlador.cpp
        src/controlador/MenuJuegoControlador.cpp
        src/controlador/MenuJuegoControlador.h
        src/controlador/CartelControlador.cpp
        src/controlador/CartelControlador.h
        src/modelo/Cliente.cpp
        src/modelo/Cliente.h
        src/modelo/MenuJuego.cpp
        src/modelo/MenuLog.cpp
        src/modelo/MenuLog.h
        src/modelo/MenuJuego.h
        src/modelo/Cartel.cpp
        src/modelo/Cartel.h
        src/tools/SDL_Utils.cpp
        src/tools/SDL_Utils.h
        src/tools/ConstantesComunicacion.h
        src/tools/ConstantesMensajes.h
        src/tools/ConstantesTeclas.h
        src/tools/ConstantesVentana.h
        src/tools/ConstantesFuente.h
        src/tools/ConstantesMenu.h src/tools/ConstantesEfectos.h
        src/tools/ConstantesPersonaje.h
        src/tools/ConstantesEnemigo.h
        src/tools/ConstantesProyectiles.h
        src/tools/ConstantesJson.h
        src/tools/ConstantesLog.h
        src/tools/ConstantesExcepciones.h
        src/tools/ConstantesComunicacion.cpp
        src/tools/ConstantesMenu.cpp
        src/tools/ConstantesJson.cpp
        src/tools/ConstantesMusica.h
        src/tools/ConstantesProyectiles.cpp
        src/tools/ConstantesEnemigos.cpp
        src/tools/ConstantesVentana.cpp
        src/tools/Timestamp.cpp
        src/tools/Timestamp.h
        src/tools/Log.cpp
        src/tools/Log.h
        src/tools/ParserEstadoJuego.cpp
        src/tools/ParserEstadoJuego.h src/tools/Utils.cpp
        src/tools/Utils.h src/vista/CargadorTexturasPersonajes.cpp
        src/tools/CargadorDeConfiguracion.cpp
        src/tools/CargadorDeConfiguracion.h
        src/hilos/Hilo.h
        src/hilos/ColaProtegida.h
        src/hilos/HiloRecibir.cpp
        src/hilos/HiloRecibir.h
        src/hilos/HiloEnviar.cpp
        src/hilos/HiloEnviar.h
        src/hilos/HiloDibujador.cpp
        src/hilos/HiloDibujador.h
        src/vista/MenuJuegoVista.cpp
        src/vista/MenuJuegoVista.h
        src/vista/JuegoVista.cpp
        src/vista/JuegoVista.h
        src/vista/TextoSDL.cpp
        src/vista/TextoSDL.h
        src/vista/CartelVista.cpp
        src/vista/CartelVista.h
        src/vista/PersonajeVista.cpp
        src/vista/PersonajeVista.h
        src/vista/EnemigoVista.cpp
        src/vista/EnemigoVista.h
        src/vista/NivelVista.h
        src/vista/NivelVista.cpp
        src/vista/CargadorTexturasEnemigos.h
        src/vista/CargadorTexturasEnemigos.cpp
        src/vista/FondoVista.cpp
        src/vista/FondoVista.h
        src/vista/CargadorTexturasPersonajes.h
        src/vista/MenuLogVista.cpp
        src/vista/MenuLogVista.h
        src/vista/CargadorTexturasProyectiles.cpp
        src/vista/CargadorTexturasProyectiles.h
        src/vista/CargadorTexturasUIPersonaje.cpp
        src/vista/CargadorTexturasUIPersonaje.h
        src/vista/EfectoExplosionVista.cpp
        src/vista/EfectoExplosionVista.h
        src/vista/ProyectilVista.cpp
        src/vista/ProyectilVista.h
        src/vista/PuntajeVista.cpp
        src/vista/PuntajeVista.h
        src/vista/UIPersonajeVista.cpp
        src/vista/UIPersonajeVista.h
        src/vista/JuegoSonido.cpp
        src/vista/JuegoSonido.h
        src/vista/CargadorTexturasCajas.cpp
        src/vista/CargadorTexturasCajas.h
        src/vista/CargadorTexturasItems.cpp
        src/vista/CargadorTexturasItems.h
        src/vista/CajaVista.cpp
        src/vista/CajaVista.h
        src/vista/ItemVista.cpp
        src/vista/ItemVista.h
        src/vista/EfectoVelocidadVista.cpp
        src/vista/EfectoVelocidadVista.h
        src/vista/BarraVidaVista.cpp
        src/vista/BarraVidaVista.h
        src/vista/EfectoEscudoVista.cpp
        src/vista/EfectoEscudoVista.h
        src/vista/Enemigo1Vista.cpp
        src/vista/Enemigo1Vista.h
        src/vista/Enemigo2Vista.cpp
        src/vista/Enemigo2Vista.h
        src/vista/Jefe1Vista.cpp
        src/vista/Jefe1Vista.h
        src/vista/Jefe2Vista.cpp
        src/vista/Jefe2Vista.h
        src/vista/Jefe3Vista.cpp
        src/vista/Jefe3Vista.h
        src/vista/EfectoExplosionPersonajeVista.cpp
        src/vista/EfectoExplosionPersonajeVista.h
        src/vista/EfectoExplosionEnemigoVista.cpp
        src/vista/EfectoExplosionEnemigoVista.h
        src/vista/EfectoExplosionJefeVista.cpp
        src/vista/EfectoExplosionJefeVista.h
        src/vista/EfectoExplosionCajaVista.cpp
        src/vista/EfectoExplosionCajaVista.h
        src/vista/CargadorTexturasEfectos.cpp
        src/vista/CargadorTexturasEfectos.h
        src/tools/ConstantesItems.h)

target_link_libraries(Cliente SDL2 SDL2_image SDL2_ttf SDL2_mixer jsoncpp pthread)
